// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedCreateBaselineButton should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    location={
      Object {
        "hash": "",
        "key": "default",
        "pathname": "/",
        "search": "",
        "state": null,
      }
    }
    navigationType="POP"
    navigator={
      Object {
        "action": "POP",
        "createHref": [Function],
        "createURL": [Function],
        "encodeLocation": [Function],
        "go": [Function],
        "index": 0,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "default",
          "pathname": "/",
          "search": "",
          "state": null,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(CreateBaselineButtonWithHooks)
        permissions={
          Object {
            "baselinesWrite": true,
          }
        }
      >
        <CreateBaselineButtonWithHooks
          addSystemModalOpened={false}
          permissions={
            Object {
              "baselinesWrite": true,
            }
          }
          toggleAddSystemModal={[Function]}
          toggleCreateBaselineModal={[Function]}
        >
          <CreateBaselineButton
            addSystemModalOpened={false}
            location={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
              }
            }
            navigate={[Function]}
            permissions={
              Object {
                "baselinesWrite": true,
              }
            }
            toggleAddSystemModal={[Function]}
            toggleCreateBaselineModal={[Function]}
          >
            <Button
              id="create-baseline-button"
              onClick={[Function]}
              ouiaId="create-baseline-button"
              variant="primary"
            >
              <ButtonBase
                id="create-baseline-button"
                innerRef={null}
                onClick={[Function]}
                ouiaId="create-baseline-button"
                variant="primary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-primary"
                  data-ouia-component-id="create-baseline-button"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  id="create-baseline-button"
                  onClick={[Function]}
                  role={null}
                  type="button"
                >
                  Create baseline
                </button>
              </ButtonBase>
            </Button>
          </CreateBaselineButton>
        </CreateBaselineButtonWithHooks>
      </Connect(CreateBaselineButtonWithHooks)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`CreateBaselineButton should render correctly 1`] = `
<Fragment>
  <Button
    id="create-baseline-button"
    isDisabled={false}
    onClick={[Function]}
    ouiaId="create-baseline-button"
    variant="primary"
  >
    Create baseline
  </Button>
</Fragment>
`;

exports[`CreateBaselineButton should render mount correctly 1`] = `
<CreateBaselineButton
  addSystemModalOpened={false}
  loading={false}
  location={
    Object {
      "pathname": "/",
    }
  }
  navigate={[Function]}
  permissions={
    Object {
      "baselinesWrite": true,
    }
  }
>
  <Button
    id="create-baseline-button"
    isDisabled={false}
    onClick={[Function]}
    ouiaId="create-baseline-button"
    variant="primary"
  >
    <ButtonBase
      id="create-baseline-button"
      innerRef={null}
      isDisabled={false}
      onClick={[Function]}
      ouiaId="create-baseline-button"
      variant="primary"
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-primary"
        data-ouia-component-id="create-baseline-button"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={false}
        id="create-baseline-button"
        onClick={[Function]}
        role={null}
        type="button"
      >
        Create baseline
      </button>
    </ButtonBase>
  </Button>
</CreateBaselineButton>
`;
